--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">&nbsp&nbsp&nbspView the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">&nbsp&nbsp&nbsp&nbspData, code, and documentation</a></p>
+        <p class="view"><a href="{{ site.github.owner_url }}">&nbsp&nbsp&nbsp&nbsp&nbsp&nbspData, code, and documentation</a></p>
         {% endif %}
         
       </header>
@@ -35,7 +29,12 @@
       {{ content }}
 
       </section>
-      
+      <footer>
+        {% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
